# olio-ohjelmointi

tehtava2/: CMakeLists.txt  game.cpp  game.h  main.cpp
tehtava3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
tehtava4/: CMakeLists.txt  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h
tehtava5/: CMakeLists.txt  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
tehtava6/: Kevat2023Kotitehtava6Laskin.pro.user.bf37da2  mainwindow.cpp  mainwindow.h  mainwindow.ui
tehtava7/: mainwindow.cpp  mainwindow.h  mainwindow.ui
untitled/: main.cpp
widgetTesti/: mainwindow.cpp  mainwindow.h  mainwindow.ui
